@@ -14,6 +14,8 @@ import org.eclipse.wb.internal.core.databinding.Activator;
 
 import org.eclipse.swt.graphics.Image;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -35,7 +37,8 @@ public final class ObserveType {
       Activator.getImage("Widgets_ObserveType.gif"),
       ExpandedStrategy.ExpandedAll);
   //
-  public static final List<ObserveType> TYPES = List.of(ObserveType.WIDGETS, ObserveType.BEANS);
+  public static final List<ObserveType> TYPES =
+      new ArrayList<>(Arrays.asList(ObserveType.WIDGETS, ObserveType.BEANS));
   //
   private final String m_name;
   private final Image m_image;
